# KiboEdge

./: .gitignore  README.md  chat_with_lmstudio.py  pyproject.toml
reports/: interim_evaluation_report_20260219.md
scripts/: run_evaluation.py  run_iteration_and_improve.py  run_smoke_tests.py
src/: main.py
src/kiboedge_toolcall_kit/: __init__.py  config.py  evaluation_metrics.py  evaluation_runner.py  io_utils.py  lfm_tool_call_parser.py  lmstudio_client.py  models.py  prompt_templates.py  tool_orchestrator.py  tool_schemas.py  tool_validation.py  tools.py
tests/fixtures/: tool_call_cases_30.json
